Amended background display on smaller devices to ensure the background image displays clearly and neatly across all screen sizes.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,12 +45,40 @@ p, h6 {
     div.card-image {
         height: 200px;
     }
+    .background {
+    background-image: url("../../static/images/cookbook_background.jpg");
+    width: 100%;
+    vertical-align: middle;
+    background-repeat: inherit;
+    background-position: 50% 50%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    display: flex;
+    z-index: -1;
+    justify-content: center;
+    margin-top: 2px;
 }
 
 @media(max-width: 349px){
     div.card-image {
         height: 150px;
     }
+    .background {
+    background-image: url("../../static/images/cookbook_background.jpg");
+    width: 100%;
+    vertical-align: middle;
+    background-repeat: inherit;
+    background-position: 50% 50%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    display: flex;
+    z-index: -1;
+    justify-content: center;
+    margin-top: 2px;
 }
 
 
@@ -84,6 +112,10 @@ p, h6 {
     height: 250px;
 }
 
+.cuisine-border {
+    border: dashed;
+    border-color: #2f4f4f;
+}
 
 
 
